--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "contributors": [],
   "dependencies": {
-    "mdns-js": "*",
+    "mdns-js": "ccakes/node-mdns-js",
     "plist-with-patches": "0.5.1"
   },
   "keywords": [
